--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!--boxicon-->
   <link rel="stylesheet"
   href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
-  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
@@ -48,11 +48,11 @@
   <header>
    
     <ul class="navlist"> 
-        <li ><a href="/index.html">Giới thiệu</a></li> 
-        <li><a href="/library.html">Thư viện</a></li> 
-        <li><a href="/event.html">Sự kiện</a></li> 
-        <li><a href="/thanhtich.html">Kết nối</a></li> 
-        <li><a href="/contact.html">Liên hệ</a></li>
+        <li ><a href="index.html">Giới thiệu</a></li> 
+        <li><a href="library.html">Thư viện</a></li> 
+        <li><a href="event.html">Sự kiện</a></li> 
+        <li><a href="thanhtich.html">Kết nối</a></li> 
+        <li><a href="contact.html">Liên hệ</a></li>
        
     </ul> 
   <div class="bx bx-menu" id="menu-icon"> </div>
@@ -98,11 +98,11 @@
           <figure class="hero-banner">
 
             <div class="img-holder one" style="--width: 270; --height: 300;">
-              <img src="http://trannuhoanglinh.com/files/2023/07/anhbia-scaled.jpg" width="270" height="300" alt="hero banner" class="img-cover">
+              <img src="./assets/anhbia.jpg" width="270" height="300" alt="hero banner" class="img-cover">
             </div>
 
             <div class="img-holder two" style="--width: 240; --height: 370;">
-              <img src="http://trannuhoanglinh.com/files/2023/07/tnhl.jpeg" width="240" height="370" alt="hero banner" class="img-cover">
+              <img src="./assets/tnhl.jpeg" width="240" height="370" alt="hero banner" class="img-cover">
             </div>
 
             <!--   -->
@@ -457,6 +457,36 @@
 
                   <p class="card-text">
                     24.05
+                  </p>
+
+                </div>
+
+              </div>
+            </li>
+            <li>
+              <div class="blog-card">
+
+                <figure class="card-banner img-holder has-after" style="--width: 370; --height: 370;">
+                  <img src="./assets/v.jpg" width="370" height="370" loading="lazy"
+                    alt="Become A Better Blogger: Content Planning" class="img-cover">
+                </figure>
+
+                <div class="card-content">
+
+                  <a href="#" class="card-btn" aria-label="read more">
+                    <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
+                  </a>
+
+                  <a href="#" class="card-subtitle"> ĐẶNG PHƯƠNG VY</a>
+
+                  <h3 class="h3">
+                    <a href="#" class="card-title">VIỆN ISB ĐẠI HỌC KINH TẾ (UEH)</a>
+                  </h3>
+
+                  
+
+                  <p class="card-text">
+                    tuyển thẳng
                   </p>
 
                 </div>
