--- a/thanhtich.html
+++ b/thanhtich.html
@@ -51,11 +51,11 @@
   <header>
    
     <ul class="navlist"> 
-        <li ><a href="/index.html">Giới thiệu</a></li> 
-        <li><a href="/library.html">Thư viện</a></li> 
-        <li><a href="/event.html">Sự kiện</a></li> 
-        <li><a href="/thanhtich.html">Kết nối</a></li> 
-        <li><a href="/contact.html">Liên hệ</a></li>
+        <li ><a href="index.html">Giới thiệu</a></li> 
+        <li><a href="library.html">Thư viện</a></li> 
+        <li><a href="event.html">Sự kiện</a></li> 
+        <li><a href="thanhtich.html">Kết nối</a></li> 
+        <li><a href="contact.html">Liên hệ</a></li>
        
     </ul> 
   <div class="bx bx-menu" id="menu-icon"> </div>
