fix hình, sửa chính tả

--- a/library.html
+++ b/library.html
@@ -76,6 +76,9 @@
             <p class="hero-text">
               Phát triển toàn diện cho học sinh về tư duy sáng tạo
             </p>
+            <p class="hero-text" style="font-weight:1000;margin-top:-20px">
+              We make everything SIMPLE
+            </p>
 
             <a href="http://127.0.0.1:5500/index.html#about" class="btn has-before">
               <span class="span">Tìm hiểu thêm</span>
@@ -208,11 +211,7 @@
             <address class="address">119/5 Phùng Tá Chu</address>
           </div>
 
-          <div class="wrapper">
-            <span class="span">Liên hệ:</span>
-
-            <a href="tel:+011234567890" class="footer-link">0369199991</a>
-          </div>
+         
 
           <div class="wrapper">
             <span class="span">Email:</span>
