--- a/thanhtich.html
+++ b/thanhtich.html
@@ -98,7 +98,7 @@
           <figure class="hero-banner">
 
             <div class="img-holder one" style="--width: 270; --height: 300;">
-              <img src="./assets/linh.jpg"  class="img-cover" position="relative" left="200px">
+              <img src="./assets/Linh.jpg"  class="img-cover" position="relative" left="200px">
             </div>
 
             <!-- <div class="img-holder two" style="--width: 240; --height: 370;">
@@ -156,8 +156,8 @@
 
   <div class="spacer"></div>
   <div class="image-grid" id="dangki">
-    <h1>REGISTER</h1>
-    <h2>Đăng kí</h2>
+    <h1>RECRUITMENT</h1>
+    <h2>Ứng tuyển</h2>
   </div>
   <div class="image-row">
     <a href="https://www.facebook.com/caringe.official">
@@ -202,11 +202,7 @@
             <address class="address">119/5 Phùng Tá Chu</address>
           </div>
 
-          <div class="wrapper">
-            <span class="span">Liên hệ:</span>
-
-            <a href="tel:+011234567890" class="footer-link">0369199991</a>
-          </div>
+          
 
           <div class="wrapper">
             <span class="span">Email:</span>
@@ -227,7 +223,7 @@
           </li>
 
           <li>
-            <a href="#dangki" class="footer-link">Đăng kí</a>
+            <a href="#dangki" class="footer-link">Ứng tuyển</a>
           </li>
 
           
